# models_training

./: .gitignore  Entrenar_modelo_YOLO.ipynb  number_detection.ipynb  numbers_classification.ipynb  pyproject.toml
