[project]
name = "train-yolo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "onnx>=1.20.0",
    "onnxruntime-gpu>=1.23.2",
    "onnxslim>=0.1.78",
    "python-decouple>=3.8",
    "roboflow>=1.2.11",
    "ultralytics>=8.3.234",
]
