[project]
name = "train-yolo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imutils>=0.5.4",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "notebook>=7.5.1",
    "onnx>=1.20.0",
    "onnxruntime-gpu>=1.23.2",
    "onnxslim>=0.1.78",
    "pandas>=2.3.3",
    "pytesseract>=0.3.13",
    "python-decouple>=3.8",
    "requests>=2.32.5",
    "roboflow>=1.2.11",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "ultralytics>=8.3.234",
]
